src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__test_body_expressions__snapshot_wait_until_with_strict_eq.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  DIRECTIVE
    AT_SIGN "@"
    IDENT "test"
    ARG ""t""
    BODY
      L_BRACE "{"
      DIRECTIVE
        AT_SIGN "@"
        IDENT "wait_until"
        ARG "__flag"
        ARG "==="
        ARG "'yes'"
        ARG "timeout"
        ARG ":"
        ARG "500"
        ARG "ms"
      R_BRACE "}"
  EOF ""
