src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__test_body_expressions__snapshot_when_action.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  DIRECTIVE
    AT_SIGN "@"
    IDENT "test"
    ARG ""t""
    BODY
      L_BRACE "{"
      DIRECTIVE
        AT_SIGN "@"
        IDENT "when"
        ARG ".btn"
        ARG "click"
      R_BRACE "}"
  EOF ""
